--- a/app/src/main/res/layout/layout_image_list_item.xml
+++ b/app/src/main/res/layout/layout_image_list_item.xml
@@ -4,25 +4,28 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="15dp"
+    app:cardCornerRadius="10dp"
     android:padding="5dp"
-    android:layout_margin="5dp"
+    android:layout_margin="2dp"
     android:id="@+id/cardView">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="50dp"
         android:gravity="top|center_horizontal"
         android:orientation="vertical">
 
         <ImageView
             app:srcCompat="@drawable/c1"
             android:scaleType="fitCenter"
-            android:id="@+id/ivMovieImg"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
+            android:id="@+id/ivImage"
+            android:layout_marginHorizontal="0dp"
+            android:layout_marginVertical="0dp"
+            android:adjustViewBounds="true"
+            android:maxHeight="150dp"
             android:layout_width="match_parent"
-            android:layout_height="150dp"/>
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
