--- a/app/src/main/res/layout/fragment_cloth.xml
+++ b/app/src/main/res/layout/fragment_cloth.xml
@@ -7,15 +7,26 @@
     tools:context=".ClothFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMovieListsInModels"
-        android:layout_width="402dp"
-        android:layout_height="648dp"
-        android:layout_margin="5dp"
+        android:id="@+id/rvImageListsInModels"
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- ProgressBar -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
