--- a/app/src/main/res/layout/fragment_cloth_for_admin.xml
+++ b/app/src/main/res/layout/fragment_cloth_for_admin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".ClothImageupload">
+    tools:context=".ClothUploadForAdmin">
 
 
     <TextView
@@ -16,14 +16,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="43dp"
-        android:text="Cloth's Image"
+        android:layout_marginBottom="20dp"
+        android:text="Add Cloth Image"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -43,15 +44,15 @@
             android:layout_height="match_parent">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_choose_file"
+                android:id="@+id/button_camera"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/button_design"
-                android:text="Choose"
+                android:text="Camera"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button_pick"
+                app:layout_constraintEnd_toStartOf="@+id/button_gallery"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,27 +62,29 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="8dp"
                 android:background="@drawable/button_design"
-                android:text="Try On"
+                android:text="Upload"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/button_pick"
+                app:layout_constraintStart_toEndOf="@+id/button_gallery"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_pick"
+                android:id="@+id/button_gallery"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:text="Pick"
+                android:text="Gallery"
                 android:background="@drawable/button_design"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button_upload"
-                app:layout_constraintStart_toEndOf="@+id/button_choose_file"
+                app:layout_constraintStart_toEndOf="@+id/button_camera"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
+
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -98,6 +101,18 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@android:drawable/alert_light_frame" />
 
+    <!-- ProgressBar -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/white"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
