--- a/app/src/main/res/layout/fragment_models.xml
+++ b/app/src/main/res/layout/fragment_models.xml
@@ -7,13 +7,25 @@
     tools:context=".ModelsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMovieListsInModels"
+        android:id="@+id/rvImageListsInModels"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- ProgressBar -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
