--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="purple">#673AB7</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -10,6 +10,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="yellow">#FFC801</color>
     <color name="lavender">#8692f7</color>
+    <color name="purple">#8692f7</color>
+
 
 
 </resources>
